--- a/prod-red-panda/Dockerfile
+++ b/prod-red-panda/Dockerfile
@@ -9,3 +9,11 @@ RUN npm install
 COPY . .
 
 CMD [ "node", "src/server.js" ]
+
+# docker build . -t redpanda
+# docker run -p 3000:3000 redpanda
+
+
+# docker rm -vf $(docker ps -aq)
+# docker rmi -f $(docker images -aq)
+# apres suppression, red panda need recharge
