init etape 3 part 2

--- a/tp3-3-occurence-mots/docker-compose.yml
+++ b/tp3-3-occurence-mots/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   mynode:
     build:
+#      dans quel context on trouve docker
       context: nodejs
       dockerfile: Dockerfile
     container_name: nodejs-container
