--- a/tp3-3-occurence-mots/react/Dockerfile
+++ b/tp3-3-occurence-mots/react/Dockerfile
@@ -6,3 +6,6 @@ RUN npm install
 COPY . .
 EXPOSE 3000
 CMD ["npm", "start"]
+
+#Supprimer tous les conteneurs quittés
+# docker rm $(docker ps -a -f status=exited -q)
