--- a/tp3-2/package.json
+++ b/tp3-2/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "redis": "^4.6.13"
   },
   "type": "module"
 }
