--- a/tp4-2-Secu1-auth/package.json
+++ b/tp4-2-Secu1-auth/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@fastify/formbody": "^7.4.0",
     "@fastify/jwt": "^8.0.0",
-    "fastify": "^4.25.2"
+    "fastify": "^4.25.2",
+    "fastify-plugin": "^4.5.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
