--- a/tp4-3-Secu1-data/package.json
+++ b/tp4-3-Secu1-data/package.json
@@ -16,6 +16,7 @@
     "@fastify/auth": "^4.4.0",
     "@fastify/jwt": "^8.0.0",
     "fastify": "^4.25.2",
-    "fastify-plugin": "^4.5.1"
+    "fastify-plugin": "^4.5.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
