--- a/mongoose-tp5/package.json
+++ b/mongoose-tp5/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/helmet": "^11.1.1",
     "fastify": "^4.26.1",
     "mongoose": "^8.2.0"
   }
